--- a/latex/sections/comp_to_O1.tex
+++ b/latex/sections/comp_to_O1.tex
@@ -4,69 +4,39 @@ In den letzten Jahren ist der Anteil an Nutzern, die Linux als Desktop - Version
 Folgender Abschnitt folgt den Erläuterung aus \cite{asilberschatz} und \cite{papercomparison}.
 Im Vergleich zum CFS arbeitet der O(1) - Scheduler mit je einer Warteschlange (engl. \textit{run queue}) pro Prozessor. Dabei besteht jede dieser Warteschlangen aus einem aktiven und abgelaufenen (engl. \textit{expired}) Array. Der Scheduler wählt den nächsten Prozess aus dem aktiven Array mit der höchsten Priorität. Wenn es Aufgaben mit gleicher Priorität gibt, wird per Round - Robin ausgewählt. Die Arrays sind zweidimensional mit 140 Prioritätsleveln angeordnet. So gibt es für Realzeitaufgaben Prioritäten von 0 (hohe Priorität) bis 99 (niedrige Priorität). Die konventionellen, zeitgeteilten Prozesse befinden sich im Interval von 100 - 139 und bilden gleichzeitig die \textit{nice} - Werte von -20 bis 19 ab. Wenn das aktive Array leer ist, d.h. keine weiteren Aufgaben mehr wählbar sind, werden die Zeiger der Arrays getauscht und das aktive wird zum abgelaufenen und umgekehrt. Die statischen Prioritäten werden um dynamische ergänzt indem der O(1) - Scheduler mittels einem Timer die durschnittliche \textit{sleep} - Zeit misst und somit die Priorität im Array anpasst. Bei einem Ablauf einer Zeitscheibe eines Prozesses wird die dynamische Priorität erneut kalkuliert, sodass bei einem Wechsel der Arrayzeiger die Elemente im Array mit den angepassten Prioritäten eingeordnet sind. Um die Interaktivität zu verbessern, versucht dieser Scheduler die interaktiven Prozesse zu identifizieren und zu bevorzugen. Dies geschieht anhand eines heuristischen Deltas. Ist dieses kleiner oder gleich einem definierten Bonus, werden interaktive Aufgaben im aktiven Array gehalten obwohl das Zeitquantum schon abgelaufen ist.
 
-Fairness Test:
-misst scheduler genauigkeit im verteilen der cpu bandbreite über multiple processes
--> papeor: diskrete integralrechnung von PI 
-benchmark besteht aus parentproc und N kindprozessen
-	erst werden alle geforked und warten auf signal
-	wenn signal kommt fangen kinder gleichzeitig an zu rechnen
-	messung in nanosec, dauer wird aufgezeichnet
-	
-messung mit 8,16,24,32 kindern, jedes set gleichzueigt und 100 mal wdh.
-intel proc mit 2.13 ghz, 2gb ram, linux 2.6.22 O(1) linux 2.6.24.2 CFS -> nur ein core enabled damit nur eine runqueue genutzt
+Im Paper \cite{papercomparison} haben die Autoren die beiden Scheduler hinsichtlich Fairness und Interaktivitätslatenz verglichen. Die Testszenarien und  Resultate aus \cite{papercomparison} werden im folgenden Abschnitt vorgestellt.
 
-resultate im bild -> 32 kinder
-standardabweichung der verbauchten zeit für jedes kind zum complete ist bei O(1) höhre als CFS
-O(1) manche	kinder sind schneller fertig als andere -> weite streuung der daten
-CFS Daten sind knapper beisammen und konzentrierter beim durchschnittswert
-zsfsg: cfs verteilt cpu zeit über jede task in einer faireren weise
-gründe: CFS teilt time-slices in sehr genau granularität \& accounting ist in nanosec
-\begin{figure}[h]
+Der Fairness - Test wurde durchgeführt, indem gemessen wurden, wie genau der Scheduler die CPU - Bandbreite über mehrere Prozesse verteilt. Dazu wurde ein Benchmark - Programm beiseite gezogen, dass eine diskrete Integralrechnung der Zahl Pi durchführt. Der Benchmark besteht dabei aus einem Elternprozess und N Kindprozessen, die die Berechnung durchführen. Dazu werden erst N Kindprozesse durch den Elternprozess erzeugt und durch ein Signal wird mitgeteilt, dass alle Kinder erzeugt worden sind und diese gleichzeitig mit der diskreten Integralrechnung beginnen. Es wird die Zeit in Nanosekunden gemessen, die jedes Kind für die Integralrechnung benötigt. Dabei werden vier Test mit 8,16,24 und 32 Kindern à 100 Wiederholungen durchgeführt. Als Testumgebung diente dabei ein Intel - Prozessor mit 2.13 GHz, 2GB Arbeitsspeicher und einem Linux 2.6.22 für O(1) und ein Linux 2.6.24.2 für CFS. Es wurde nur ein Prozessorkern aktiviert, damit nur eine Warteschlange genutzt wird. \\
+. 
+\begin{figure} [h]
 	\centering
 	\includegraphics[width=0.45\textwidth]{pictures/fairness_32_cfs.png}
-	\caption{Fairness-Messung für 32 Kinprozesse im CFS Scheduler.}
+	\caption{Fairness-Messung für N=32 im CFS Scheduler.}
 	\label{fig:fair_meas_cfs}
 \end{figure}
-\begin{figure}[h]
+\begin{figure} [h]
  	\centering
  	\includegraphics[width=0.45\textwidth]{pictures/fairness_32_O1.png}
- 	\caption{Fairness-Messung für 32 Kinprozesse im O(1) Scheduler.}
+ 	\caption{Fairness-Messung für N=32 im O(1) Scheduler.}
  	\label{fig:fair_meas_o1}
 \end{figure}
+In den Abbilungen \ref{fig:fair_meas_cfs} \& \ref{fig:fair_meas_o1} sind die Ergebnisse bei N=32 zu sehen. Dabei ist zu erkennen, dass die Standardabweichung der verbrauchten Zeit pro Kind beim O(1) - Scheduler höher ist als bei CFS. Die weite Streuung der Daten im Diagramm \ref{fig:fair_meas_o1} zeigt, dass manche Kinder schneller fertig sind als andere. Dahingegen sind die Daten im Diagramm zum CFS knapper un konzentrierte um den Durchschnittswert angeordnet. \\
+Nach \cite{papercomparison} kann zusammenfassend gesagt werden, dass CFS die zur Verfügung stehende CPU - Zeit auf eine fairere Weise über jede Aufgabe verteilt. Die Autoren nennen als Gründe dafür, dass CFS die Zeitquanten sehr granular verteilt und diese in Nanosekunden durchgeführt wird
 
-Interactive Test:
-interaktiviät: scheduling latency o. jitter die in aufgaben unter versch. workloads präsentiert wird
-Interbench -> versch. interactive taks mit background loads
-misst die zeit zwischen dem anfragen der interactive taks der cpu ressource und wann sie sie tatsächlich bekommt
-X.window simulation und audio, video, full load
-3 tests je 100mal:	
-  interact	background load
-1 xwindow	audio 5 %
-2 xwindow	vide 40 %
-3 xwindow	full load 100 %
- 
-1. vergleiochsbenachmark: wieviele unbedeutende loops schafft das system in einer millisec -> constante in emulation
-2. latenz zwischen start zeit des aufrufs des xwindow und wann es tatsächlich executing ist
-	-> zeit die scheduler braucht um ressource zu alloc.
-3. maximum und average /Mittelwert
-
-Resultate:
-CFS had neidriger latenz wenn wenig load, ansonsten höhere als O(1)
-	allerdings ist latenz immer noch weit unter der menschl wahrnehmug, d.h. ein nutzer nimmt den unterschied nicht wahr (20-40ms braucht stimulus zum hirn)
-CFS hat niedrigere Maximum werte in allen drei tests -> auch hier nicht wahrnehmbar
-CFS lag time jeder task ist an period gebunden und O(1) jede prio hat auch gleiche base time slice
-
-die bessere effizienz kann damit erklärt werden, weil fairer und cfs braucht keinen komplexen algo um interactive tasks zu identifizieren
-\begin{figure}[h]
+Für die Messung der Interaktivitätslatenz wurde ebenfalls ein Benchmark genutzt, welches Interaktivitätsaufgaben und unterschiedliche Hintergrundaufgaben simuliert. Dabei wurde die Zeit gemessen, die zwischen dem Anfragen des Prozessors durch die interaktive Aufgabe und dem tatsächlichen Zeitpunkt des Erhalts der CPU liegt. Das ist dann die Zeit, die der Scheduler benötigt, um die Ressource CPU für die interaktive Aufgabe zu allokieren. Im Test von \cite{papercomparison} wurden drei Tests durchgeführt: In jedem davon war die interaktive Aufgabe das X - Window System eines Linux - Betriebssystems und als Hintergrundaufgaben wurden drei verschiedene Belastungen simuliert. Im ersten Test war ein Abspielen einer Audiodatei mit 5\% CPU - Load, im zweiten das Abspielen eines Videos bei 60 frames/sec mit 40\% CPU - Load und abschließend eine volle Belastung bei 100\% simuliert. Auch hier wurde jeder Test 100 mal wiederholt und die Ergebnisse für die durschnittliche (arithmetisches Mittel) und die Maximallatenz in zwei Diagrammen \ref{fig:avg_latency} \ref{fig:max_latency} dargestellt. 
+\begin{figure} [h]
  	\centering
  	\includegraphics[width=0.45\textwidth]{pictures/avg_latency.png}
  	\caption{Durchschnittslatenz in CFS und O(1) Scheduler.}
  	\label{fig:avg_latency}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure} [h]
  	\centering
  	\includegraphics[width=0.45\textwidth]{pictures/max_latency.png}
- 	\caption{Durchschnittslatenz in CFS und O(1) Scheduler.}
+ 	\caption{Maximallatenz in CFS und O(1) Scheduler.}
  	\label{fig:max_latency}
 \end{figure}
+Als Resultat ist zu erkennen, dass CFS bei wenig Belastung eine niedrigere Durschnittslatenz hat und bei mittlerer und höherer Belastung O(1) die niedrigeren Werte zeigt. Bei den Maximalwerten besitzt der CFS in allen drei Fällen niedrigere Werte als O(1). Jedoch liegen die hier gemessenen Werte immer noch weit unter der menschlichen Wahrnehmung (der Stimulus zum Hirn braucht schon 20-40ms), sodass ein Benutzer den Unterschied nicht bemerken würde. Es wurde gezeigt, dass obwohl der CFS keine Bervorzugung von interaktiven Aufgaben mehr vornimmt, die Interaktivitätslatenz vergleichbar zum O(1) - Scheduler ist. 
+
+Insgesamt erklären die Autoren die bessere Effizienz des CFS, da dieser fairer zu allen Aufgaben im System ist und keinen komplexen Algorithmus und Heuristiken benötigt, um interaktive Aufgaben zu identifizieren und diese zu bevorzugen.
