--- a/latex/sections/c_structs.tex
+++ b/latex/sections/c_structs.tex
@@ -14,7 +14,7 @@ Wenn ein Prozess seinen Zustand in Ausführbar ändert (oder erstmalig durch \te
 In beiden Fällen wird abschließend der neue Prozess im Baum eingehängt und darauf darauf folgend die Eigenschaften entgegen eines Ungleichgewichtes aktualisiert.
 
 Analog dem Einfügen eines neuen Prozesses in den Baum, gibt es Ereignisse die ein Löschen eines Prozesses aus dem Baum erfordern. Dies geschieht üblicherweise wenn ein Prozess blockiert oder terminiert. Auch hier wird eine Unterfunktion aufgerufen, welche die eigentliche Aktion durchführt.
-Da beim Löschen sechs verschiedene Konstellationen auftreten können, wie der für die erforderlichen Eigenschaften repariert werden kann \cite{tcormen}, bietet die C - Bibliothek für Rot-Schwarz-Bäume eine Funktion \texttt{rb\_erase()} für diese Anforderung bereits an. Wichtig für die Implementierung des CFS ist, dass der Zwischenspeicher für den linkesten Knoten aktualisiert wird. Falls dies genau der Prozess ist, der entfernt werden soll, muss natürlich mit einem Aufruf von \texttt{rb\_next()} der nächste Prozess zur Ausführung ausgewählt werden. 
+Da beim Löschen sechs verschiedene Konstellationen auftreten können, wie der für die erforderlichen Eigenschaften repariert werden kann \cite{tcormen}, bietet die C - Bibliothek für Rot-Schwarz-Bäume eine Funktion "- \texttt{rb\_erase()} für diese Anforderung bereits an. Wichtig für die Implementierung des CFS ist, dass der Zwischenspeicher für den linkesten Knoten aktualisiert wird. Falls dies genau der Prozess ist, der entfernt werden soll, muss natürlich mit einem Aufruf von \texttt{rb\_next()} der nächste Prozess zur Ausführung ausgewählt werden. 
 
 Jedoch fällt hier auf, dass die Unterfunktion sehr simpel aufgebaut ist, da die Bibliothek der Rot-Schwarz-Baum Implementierung in C bereits eine Funktion \texttt{rb\_erase()} mitbringt, welche die nötigen Operationen durchführt. Wichtig ist aber auch beim Entfernen eines Prozesses, dass der Zwischenspeicher für den linkesten Knoten aktualisiert wird. Falls dies genau der Prozess ist, der entfernt werden soll, muss mit einem Aufruf von \texttt{rb\_next()} der nächste Prozess zur Ausführung ausgewählt werden. Diese beinhaltet ein traversieren zum jetzt neuen linkesten Knoten.
 
