--- a/latex/sections/scheduling.tex
+++ b/latex/sections/scheduling.tex
@@ -9,7 +9,7 @@ Eine andere Definition ist von Alessandro Agnetis aus seinem Buch \cite{aagnetis
 \begin{quote}
 \textit{"`[...] by scheduling we mean all actions that have to be done in order to determine when each activity of a set is to start and to complete."'}
 \end{quote}
-So umfasst seiner Ansicht nach Scheduling diejenigen Tätig"-keiten, die zur Bestimmung der Start- und Endzeit einer Aktivität aus einem Set getätigt werden müssen. Den Begriff Job spezifiziert er als Aktivität aus einem Set. So ist jeder Job im Wettkampf mit den anderen um die Nutzung von Zeit und Ressourcen. Als Ressourcen charakterisiert der Autor alles, was zur erfolgreichen Ausführung der Jobs erforderlich ist. Wie M. Pinedo benennt er Scheduling ebenso als einen Prozess, der sich mit der Zuteilung von Ressourcen zu Jobs beschäftigt. Seiner Meinung nach ist ein \textit{Schedule} (Plan) somit durch eine Menge von Startzeiten und zugeteilten Ressourcen bestimmt, der einige vordefinierte Anforderungen erfüllt.\\
+So umfasst seiner Ansicht nach Scheduling diejenigen Tä"-tigkeiten, die zur Bestimmung der Start- und Endzeit einer Aktivität aus einem Set getätigt werden müssen. Den Begriff Job spezifiziert er als Aktivität aus einem Set. So ist jeder Job im Wettkampf mit den anderen um die Nutzung von Zeit und Ressourcen. Als Ressourcen charakterisiert der Autor alles, was zur erfolgreichen Ausführung der Jobs erforderlich ist. Wie M. Pinedo benennt er Scheduling ebenso als einen Prozess, der sich mit der Zuteilung von Ressourcen zu Jobs beschäftigt. Seiner Meinung nach ist ein \textit{Schedule} (Plan) somit durch eine Menge von Startzeiten und zugeteilten Ressourcen bestimmt, der einige vordefinierte Anforderungen erfüllt.\\
 Zusammenfassend ergeben die Definitionen aus \cite{mpinedo} und \cite{aagnetis} einen Prozess, der die Planung und Zuteilungen von Ressourcen zu Aufgaben sowie deren Ausführung und Beobachtung beschreibt. Dazu kommt die Einbeziehung sowie Auflösung von Abhängig"-keiten zu anderen Systemen, die Start- und Endzeit einer jeden Aufgabe beeinflussen.
 
 Der Scheduler verwaltet Ressourcen und Aufgaben und erstellt dazu einen optimalen Plan, der sicherstellen soll, dass alle Aufgaben mit ihren Eigenschaften (Startzeit, Ablaufdatum, Priorität) und den benötigten Ressourcen erfolgreich ausgeführt werden. Oftmals ist es nicht einfach, einen optimalen Plan für die gegebenen Anforderungen zu finden. Kriterien, welche durch den Scheduler optimiert werden sollen, sind unten in diesem Abschnitt vorgestellt.\\
@@ -22,7 +22,7 @@ In diesem Beispiel sind die Gates die Ressourcen und die Wartung der Flugzeuge d
 \end{description}
 Im Kontext des \textit{Prozess-Scheduling} definiert Avi Silberschatz in \cite{asilberschatz}, dass dieses dafür verantwortlich ist, dass die Prozesse aus den Warteschlangen ausgeführt werden können. Dazu erteilt der Scheduler den Prozessen eine gewisse Zeit lang die CPU, in der sie diese Ressource benutzen können. Dabei müssen sowohl im Bezug auf die Prozesse als auch im Bezug auf das Gesamtsystem folgende Ziele optimiert werden \cite{asilberschatz} \cite{rlove}.\\
 \textbf{Effizienz} ist im Sinne der Kosten-Nutzen-Relation gleich Ertrag durch Aufwand und ist ein Maß für den Umgang mit knappen Ressourcen (CPU, Fertigungsmaschine, Flughafengate, etc.). Um untätige Zeiten zu vermeiden, sollten also eine CPU maximal ausgelastet sein. Ebenso ist es wichtig einen hohen \textbf{Durchsatz} zu erreichen. Für das Scheduling bedeutet dies, dass möglichst viele Aufgaben pro Zeiteinheit ausgeführt werden sollen. Der Durchsatz hängt de facto stark von der Komplexität der Jobs in Verbindung mit der Masse an Jobs ab. \textbf{Fairness} ist im Kontext des CFS ein sehr wichtiger Faktor (siehe auch \ref{s:fair}): Die Neutralität von Ressourcen sollte gewährleistet sein; jedem Prozess ist im Gesamten die gleiche Prozessorzeit zuzuteilen. Damit wird verhindert, dass eine Instanz \textit{verhungert}, somit nicht dauerhaft vernachlässigt wird. Mechanismen für Fairness sind beispielsweise \textit{Preemption} (Verdrängung) oder \textit{Round Robin} (Zeitscheibenverfahren). 
-Aufgaben, die ein Ablaufdatum besitzen, müssen so eingeplant werden, dass der definierte Zeitpunkt eingehalten wird. Es existieren unterschiedliche Formen von \textbf{Deadlines} bzw. Echtzeitanforderungen: Bei einer \textit{harten} Deadline muss das Ablaufdatum präzise, bei \textit{weicher} Deadline einigermaßen eingehalten werden. Ferner sollte bei jedem Scheduling-Algorithmus versucht werden, die \textbf{Komplexität} so gering wie möglich zu halten (niedrige Aufwände im Bezug auf die O-Notation). Die Scheduling-Operatio"-nen sollten \textbf{einfach und schnell} verfahren sowie transparent sein.  
+Aufgaben, die ein Ablaufdatum besitzen, müssen so eingeplant werden, dass der definierte Zeitpunkt eingehalten wird. Es existieren unterschiedliche Formen von \textbf{Deadlines} bzw. Echtzeitanforderungen: Bei einer \textit{harten} Deadline muss das Ablaufdatum präzise, bei \textit{weicher} Deadline einigermaßen eingehalten werden. Ferner sollte bei jedem Scheduling - Algorithmus versucht werden, die \textbf{Komplexität} so gering wie möglich zu halten (niedrige Aufwände im Bezug auf die O-Notation). Die Scheduling-Operatio"-nen sollten \textbf{einfach und schnell} verfahren sowie transparent sein.  
 
 Für alle Scheduling-Systeme ist es wünschenswert, die Effizienz und den Durchsatz zu maximieren sowie  die Ab"-arbeitungs- und Antwortzeiten zu minimieren. In Batch-Systemen wird Wert auf einen hohen Durchsatz und geringe Antwortzeiten gelegt. In interaktiven (time-sharing) Systemen (bspsw. Betriebssystemen) ist es wichtiger, die Varianz der Antwortzeiten anstatt die durschnittliche Antwortzeit zu minimieren. Realzeitsysteme (z.B. Prozessleittechnik, Motorsteuerung, Robotik) hingegen legen einen hohen Wert auf die Einhaltung der Ablaufdaten und geringe Abarbeitungszeiten \cite{asilberschatz}.\\
 
