alle Hochkommata ersetzt

--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -83,7 +83,7 @@ Ziel dieses Abschnittes ist es, dem Leser ein grundlegendes Verständnis für di
 \section{Zusammenfassung}\label{s:end}
 In dieser Arbeit sind die grundlegenden Eigenschaften und der Aufbau des CF - Schedulers dargestellt. Es wird gezeigt, dass der CF - Scheduler mit Hilfe effizienter Algorithmen, einfachen Prinzipien und der Datenstruktur Rot - Schwarz - Baum versucht, immer eine faire Verteilung unter den aufzuführenden Prozessen zu erreichen. Zugleich wird dabei auch weiterhin eine annähernde Multitask - Umgebung beibehalten. Im Vergleich zum O(1) - Scheduler wird bewiesen, dass der CFS das Kriterium Fairness deutlich verfeinert. Darüber hinaus wird aufgezeigt, dass der CFS mit einer besseren Fairness trotzdem gute Latenzzeiten im Bereich von interaktiven Aufgaben aufweist ohne diese explizit zu bevorzugen.
 
-Ein großes Problem stellt sich allerdings heraus, wenn der CF - Scheduler mit zu vielen Prozessen konfrontiert wird. Über\-steigt die Menge der Anfragen einen gewissen Rahmen, so wird sich der Scheduler mehr und mehr den  \glqq com\-pletely-fair\grqq{} Prinzipien entfernen.  
+Ein großes Problem stellt sich allerdings heraus, wenn der CF - Scheduler mit zu vielen Prozessen konfrontiert wird. Über\-steigt die Menge der Anfragen einen gewissen Rahmen, so wird sich der Scheduler mehr und mehr den  \textit{com\-pletely-fair}-Prinzipien entfernen.  
 
 Auch Programme, welche mit sehr vielen Threads arbeiten, zwingen den Scheduler zu einem Ungleichgewicht. Da dieser Prozess - Scheduler taskbasiert arbeitet, erhalten Programme mit einer hohen Anzahl von Threads eine für sie vorteilhafte, aber für andere Programme unfaire Prozessorzuteilung. Ein Lösung für dieses Problem könnte der bereits in Entwicklung befindliche Process - Fair - Scheduler (PFS) bereitstellen. Dieser versucht eine faire Verteilung über die Prozesse selbst zu erreichen. Dabei wird z.B. das Gewicht des anstehenden Prozesses nochmal durch die Anzahl der Threads des sich gerade in Ausführung befindenen Programmes geteilt. Wie weit sich dieser Ansatz allerdings durchsetzen wird, muss in Zukunft durch praktischen Einsatz erprobt werden.
 
